--- a/HW01.ipynb
+++ b/HW01.ipynb
@@ -9,7 +9,12 @@
     "* 학번: 99990000\n",
     "\n",
     "위에 이름과 학번을 자신의 것으로 기입하고 또 맨 위에 노트북의 제목도 `HW01<이름><학번>`으로 바꾸어 HiClass를 통해 마감시간까지 제출하면 됩니다.\n",
-    "마감시간은 HiClass에 공지되어 있습니다."
+    "마감시간은 HiClass에 공지되어 있습니다.\n",
+    "\n",
+    "* 도형은 원, 직사각형(가로세로변은 항상 x축 y축과 평행), 직각삼각형(직각 꼭지점과 만나는 변들은 항상 x축 y축과 평행) 이 세가지밖에 없다는 가정하고 도형의 성질을 이용해도 됩니다. 예를 들면 충돌검사를 위한 코드를 작성해 나가면서 \"직사각형도 직삼각형도 아닌 것 같으니 네놈은 원이 분명하구나!\"고 판단할 데이타가 생기면 원의 성질 등을 활용한다건가 하는 것.\n",
+    "* 하지만 아직 배우지 않은 Java의 업캐스팅 기능을 활용해 추상적 모양 변수를 구체적 모양 셋 중 하나의 값으로 형변환하는 것은 사용하지 않기로 합니다. (그러면 너무 좀 지나치게 싱겁게 끝나버리니 ...)  \n",
+    "* 이 수업은 수학 기하학 과목도 아니고 최적의 알고리듬을 찾는 과목도 아니기 때문에 컴퓨터의 연산능력에 어느정도 의존해 조금 무식하게 접근하더라도 논리에 맞고 답만 정확하면 감점한다던가 그러지는 않습니다. 물론 수학적 원리나 좋은 알고리듬으로 완성도를 높이고 싶은 것은 개인적인 만족과 자기발전에 도움이 되니까 여유가 있는 분들은 그런 방면으로 노력해도 되고요.\n",
+    "* 하지만 그렇다고 너무 무식하게 하면 감점을 하지 않을 수 없겠죠. 예를 들면 500x800 직사각형의 충돌검사를 위해 `for (int i=0; i<500; ++i) { for (int j=0; j<800; ++j) { ... } }` 이렇게 돌리겠다면 양심적으로 좀 너무 무리수겠죠."
    ]
   },
   {
@@ -20,7 +25,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrbbba71d8.RGB"
+       "com.twosigma.beaker.javash.bkr0099753f.RGB"
       ]
      },
      "execution_count": 1,
@@ -88,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrbbba71d8.Point"
+       "com.twosigma.beaker.javash.bkr0099753f.Point"
       ]
      },
      "execution_count": 4,
@@ -119,7 +124,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrbbba71d8.Point@291f079e"
+       "com.twosigma.beaker.javash.bkr0099753f.Point@3d9096f0"
       ]
      },
      "execution_count": 5,
@@ -140,7 +145,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrbbba71d8.Point@7a3f8c7"
+       "com.twosigma.beaker.javash.bkr0099753f.Point@51cc7dcd"
       ]
      },
      "execution_count": 6,
@@ -171,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrbbba71d8.ShapeObj"
+       "com.twosigma.beaker.javash.bkr0099753f.ShapeObj"
       ]
      },
      "execution_count": 7,
@@ -221,7 +226,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrbbba71d8.CircObj"
+       "com.twosigma.beaker.javash.bkr0099753f.CircObj"
       ]
      },
      "execution_count": 8,
@@ -274,7 +279,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "367a8a82-b6be-465a-9b46-b204dd4bfe7d",
+       "model_id": "a1a3f3fe-8094-4265-88d4-b8d1ea791392",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,7 +332,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e49983be-2534-441e-ae4c-7fecc0aed68c",
+       "model_id": "10045155-5015-430a-9c33-e2309ce59021",
        "version_major": 2,
        "version_minor": 0
       },
@@ -379,7 +384,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkrbbba71d8.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkrbbba71d8.ShapeObj\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr0099753f.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr0099753f.ShapeObj\u001b[0;0m",
       "\u001b[0;31m class RectObj extends ShapeObj { int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                                ^ \u001b[0;0m"
      ]
@@ -408,7 +413,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5bacd305-3283-454e-a886-4366f5b7ea8f",
+       "model_id": "ecd92a28-07f7-4e17-9caa-8970ad356d10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -444,7 +449,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkrbbba71d8.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkrbbba71d8.ShapeObj\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr0099753f.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr0099753f.ShapeObj\u001b[0;0m",
       "\u001b[0;31m class RTriObj extends ShapeObj { Point p; int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                                         ^ \u001b[0;0m"
      ]
@@ -492,7 +497,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrbbba71d8.Shape"
+       "com.twosigma.beaker.javash.bkr0099753f.Shape"
       ]
      },
      "execution_count": 14,
@@ -530,7 +535,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrbbba71d8.Circle"
+       "com.twosigma.beaker.javash.bkr0099753f.Circle"
       ]
      },
      "execution_count": 15,
@@ -584,7 +589,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "abf677db-3873-4e6e-808d-48b8fc0c5ca2",
+       "model_id": "2c5500db-5d83-4aa5-8389-6ccb8d0156cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -648,7 +653,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkrbbba71d8.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkrbbba71d8.Point,com.twosigma.beaker.javash.bkrbbba71d8.Obj) in com.twosigma.beaker.javash.bkrbbba71d8.Shape\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr0099753f.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr0099753f.Point,com.twosigma.beaker.javash.bkr0099753f.Obj) in com.twosigma.beaker.javash.bkr0099753f.Shape\u001b[0;0m",
       "\u001b[0;31m class Rectangle extends Shape { int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                               ^ \u001b[0;0m"
      ]
@@ -673,7 +678,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkrbbba71d8.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkrbbba71d8.Point,com.twosigma.beaker.javash.bkrbbba71d8.Obj) in com.twosigma.beaker.javash.bkrbbba71d8.Shape\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr0099753f.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr0099753f.Point,com.twosigma.beaker.javash.bkr0099753f.Obj) in com.twosigma.beaker.javash.bkr0099753f.Shape\u001b[0;0m",
       "\u001b[0;31m class RTriangle extends Shape { int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                               ^ \u001b[0;0m"
      ]
@@ -802,6 +807,26 @@
        "padding": "",
        "right": "",
        "top": ""
+      }
+     },
+     "10045155-5015-430a-9c33-e2309ce59021": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_6aadbecd-c65f-42d4-bfbf-1daa4f242a1e",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
+       "visible": true
       }
      },
      "17b1c591-4e59-4c8c-a2e7-3d60063c8619": {
@@ -942,6 +967,55 @@
        "visible": true
       }
      },
+     "2aaeb27a-2833-44f0-a6f4-b00578af0c3e": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
+     "2c5500db-5d83-4aa5-8389-6ccb8d0156cc": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_401709a0-8bbe-4bec-85c3-73b4627069ab",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div><div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='50' style='stroke:black; stroke-width:1; fill:rgb(255,0,255); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='50' style='stroke:black; stroke-width:1; fill:rgb(255,0,255); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
+       "visible": true
+      }
+     },
      "336918c6-d1a1-46ac-a250-92d4a7e44cb6": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "*",
@@ -1049,6 +1123,35 @@
        "placeholder": "",
        "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div><div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='50' style='stroke:black; stroke-width:1; fill:rgb(255,0,255); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='50' style='stroke:black; stroke-width:1; fill:rgb(255,0,255); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
        "visible": true
+      }
+     },
+     "401709a0-8bbe-4bec-85c3-73b4627069ab": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
       }
      },
      "465ccc8d-e62a-4c2e-ad99-d0c0ddcf7108": {
@@ -1228,6 +1331,35 @@
       }
      },
      "6931e27d-3e2c-4dc6-babf-a1679436d999": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
+     "6aadbecd-c65f-42d4-bfbf-1daa4f242a1e": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
       "model_name": "LayoutModel",
@@ -1510,6 +1642,26 @@
        "top": ""
       }
      },
+     "a1a3f3fe-8094-4265-88d4-b8d1ea791392": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_bb42f457-9d68-446b-95b6-dc7d137ad2fb",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg></div>",
+       "visible": true
+      }
+     },
      "a35a0059-c145-4876-bade-44f47faeda34": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "*",
@@ -1707,6 +1859,35 @@
       }
      },
      "b389720f-c517-46a0-9291-49c35832b34c": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
+     "bb42f457-9d68-446b-95b6-dc7d137ad2fb": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
       "model_name": "LayoutModel",
@@ -2164,6 +2345,26 @@
        "msg_throttle": 3,
        "placeholder": "",
        "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg></div>",
+       "visible": true
+      }
+     },
+     "ecd92a28-07f7-4e17-9caa-8970ad356d10": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_2aaeb27a-2833-44f0-a6f4-b00578af0c3e",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<svg width='300' height='300' style='border:solid 1px'><rect x='100' y='70' width='40' height='100' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg>",
        "visible": true
       }
      },
