--- a/Lect06.ipynb
+++ b/Lect06.ipynb
@@ -4,6 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# 32 접근 제어자\n",
+    "이 장의 내용은 홈페이지에 참고자료로 링크한 온라인 책에 더 간단히 정리되어 있으니 그것을 한번 찾아보고 자습한다\n",
+    "\n",
+    "https://wikidocs.net/232"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 33 Abstract\n",
     "추상 클래스와 추상 메소드에 대해 알아본다.\n",
     "\n",
@@ -220,13 +230,6 @@
     "System.out.println(a2.toString());\n",
     "System.out.println(b2.toString());"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
