--- a/HW01.ipynb
+++ b/HW01.ipynb
@@ -25,7 +25,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr0099753f.RGB"
+       "com.twosigma.beaker.javash.bkr7fb38250.RGB"
       ]
      },
      "execution_count": 1,
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr0099753f.Point"
+       "com.twosigma.beaker.javash.bkr7fb38250.Point"
       ]
      },
      "execution_count": 4,
@@ -124,7 +124,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr0099753f.Point@3d9096f0"
+       "com.twosigma.beaker.javash.bkr7fb38250.Point@123045a6"
       ]
      },
      "execution_count": 5,
@@ -145,7 +145,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr0099753f.Point@51cc7dcd"
+       "com.twosigma.beaker.javash.bkr7fb38250.Point@2348f83e"
       ]
      },
      "execution_count": 6,
@@ -176,7 +176,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr0099753f.ShapeObj"
+       "com.twosigma.beaker.javash.bkr7fb38250.ShapeObj"
       ]
      },
      "execution_count": 7,
@@ -226,7 +226,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr0099753f.CircObj"
+       "com.twosigma.beaker.javash.bkr7fb38250.CircObj"
       ]
      },
      "execution_count": 8,
@@ -279,7 +279,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1a3f3fe-8094-4265-88d4-b8d1ea791392",
+       "model_id": "f07df9c3-5964-4f0c-a0ae-7d3faacd94cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,7 +332,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10045155-5015-430a-9c33-e2309ce59021",
+       "model_id": "d63909ab-ceeb-45c1-896d-157effa4889b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -384,7 +384,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr0099753f.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr0099753f.ShapeObj\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr7fb38250.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr7fb38250.ShapeObj\u001b[0;0m",
       "\u001b[0;31m class RectObj extends ShapeObj { int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                                ^ \u001b[0;0m"
      ]
@@ -413,7 +413,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ecd92a28-07f7-4e17-9caa-8970ad356d10",
+       "model_id": "f90b8987-5afd-4fec-b4a2-a7fb1f50b0e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -449,15 +449,14 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr0099753f.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr0099753f.ShapeObj\u001b[0;0m",
-      "\u001b[0;31m class RTriObj extends ShapeObj { Point p; int w; int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                                         ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr7fb38250.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr7fb38250.ShapeObj\u001b[0;0m",
+      "\u001b[0;31m class RTriObj extends ShapeObj { int w; int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                                ^ \u001b[0;0m"
      ]
     }
    ],
    "source": [
     "class RTriObj extends ShapeObj { // 직각삼각형 모양 물건 클래스\n",
-    "    Point p; // 직각인 꼭지점\n",
     "    int w; // 직각인 꼭지점으로부터 음수/양수로 왼쪽/오른쪽 방향으로의 w만큼 떨어진 꼭지점 나타냄\n",
     "    int h; // 직각인 꼭지점으로부터 음수/양수로 아래쪽/위쪽 방향으로의 h만큼 떨어진 꼭지점 나타냄\n",
     "    \n",
@@ -497,7 +496,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr0099753f.Shape"
+       "com.twosigma.beaker.javash.bkr7fb38250.Shape"
       ]
      },
      "execution_count": 14,
@@ -535,7 +534,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr0099753f.Circle"
+       "com.twosigma.beaker.javash.bkr7fb38250.Circle"
       ]
      },
      "execution_count": 15,
@@ -589,7 +588,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c5500db-5d83-4aa5-8389-6ccb8d0156cc",
+       "model_id": "9c4553a4-7ae9-4448-964c-7f492104fdfd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -653,7 +652,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr0099753f.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr0099753f.Point,com.twosigma.beaker.javash.bkr0099753f.Obj) in com.twosigma.beaker.javash.bkr0099753f.Shape\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr7fb38250.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr7fb38250.Point,com.twosigma.beaker.javash.bkr7fb38250.Obj) in com.twosigma.beaker.javash.bkr7fb38250.Shape\u001b[0;0m",
       "\u001b[0;31m class Rectangle extends Shape { int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                               ^ \u001b[0;0m"
      ]
@@ -678,7 +677,7 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr0099753f.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr0099753f.Point,com.twosigma.beaker.javash.bkr0099753f.Obj) in com.twosigma.beaker.javash.bkr0099753f.Shape\u001b[0;0m",
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr7fb38250.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr7fb38250.Point,com.twosigma.beaker.javash.bkr7fb38250.Obj) in com.twosigma.beaker.javash.bkr7fb38250.Shape\u001b[0;0m",
       "\u001b[0;31m class RTriangle extends Shape { int w; int h;  }\u001b[0;0m",
       "\u001b[0;31m ^                                               ^ \u001b[0;0m"
      ]
@@ -1203,6 +1202,35 @@
        "top": ""
       }
      },
+     "4f509067-4aeb-4094-9b89-28a117855065": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
      "502e64e2-5793-4a73-b8e5-aef56c1f2969": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
@@ -1555,6 +1583,35 @@
        "visible": true
       }
      },
+     "847e4dbb-0210-4ef8-8b63-475568016a09": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
      "8a6beaa1-46f8-4f57-bf48-cbf4ea3169f5": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
@@ -1611,6 +1668,26 @@
        "padding": "",
        "right": "",
        "top": ""
+      }
+     },
+     "9c4553a4-7ae9-4448-964c-7f492104fdfd": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_4f509067-4aeb-4094-9b89-28a117855065",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div><div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='50' style='stroke:black; stroke-width:1; fill:rgb(255,0,255); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='50' style='stroke:black; stroke-width:1; fill:rgb(255,0,255); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
+       "visible": true
       }
      },
      "a0ba46d0-d656-4d2a-991b-133fdb476eba": {
@@ -2181,6 +2258,26 @@
        "visible": true
       }
      },
+     "d63909ab-ceeb-45c1-896d-157effa4889b": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_e2ee6eba-4031-4171-8797-cc1b3449ac13",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='110' cy='110' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /><circle cx='160' cy='160' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /><circle cx='220' cy='220' r='70' style='stroke:black; stroke-width:1; fill:rgb(0,0,255); opacity:0.33' /></svg></div>",
+       "visible": true
+      }
+     },
      "d888d34f-cf44-482e-ba67-f6b42234ec66": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
@@ -2259,6 +2356,35 @@
        "top": ""
       }
      },
+     "dc0e2cf7-6032-47c1-ae2c-049f60087450": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
+      }
+     },
      "dce042b7-27ec-439a-be92-1c9e63555f61": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
@@ -2306,6 +2432,35 @@
        "placeholder": "",
        "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg></div>",
        "visible": true
+      }
+     },
+     "e2ee6eba-4031-4171-8797-cc1b3449ac13": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "*",
+      "model_name": "LayoutModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "align_content": "",
+       "align_self": "",
+       "border": "",
+       "bottom": "",
+       "flex": "",
+       "height": "",
+       "justify_content": "",
+       "left": "",
+       "margin": "",
+       "max_height": "",
+       "max_width": "",
+       "min_height": "",
+       "min_width": "",
+       "msg_throttle": 3,
+       "overflow": "",
+       "overflow_x": "",
+       "overflow_y": "",
+       "padding": "",
+       "right": "",
+       "top": ""
       }
      },
      "e49983be-2534-441e-ae4c-7fecc0aed68c": {
@@ -2388,6 +2543,26 @@
        "visible": true
       }
      },
+     "f07df9c3-5964-4f0c-a0ae-7d3faacd94cd": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_847e4dbb-0210-4ef8-8b63-475568016a09",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<div><svg width='300' height='300' style='border:solid 1px'><circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg></div>",
+       "visible": true
+      }
+     },
      "f1ff1b54-a651-4a83-9515-198cf16aa076": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "*",
@@ -2434,6 +2609,26 @@
        "msg_throttle": 3,
        "placeholder": "",
        "value": "<svg width='400' height='110'><rect width='300' height='100' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg>",
+       "visible": true
+      }
+     },
+     "f90b8987-5afd-4fec-b4a2-a7fb1f50b0e5": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "*",
+      "model_name": "HTMLModel",
+      "state": {
+       "_model_module_version": "*",
+       "_view_module_version": "*",
+       "background_color": null,
+       "color": null,
+       "font_family": "",
+       "font_size": "",
+       "font_style": "",
+       "font_weight": "",
+       "layout": "IPY_MODEL_dc0e2cf7-6032-47c1-ae2c-049f60087450",
+       "msg_throttle": 3,
+       "placeholder": "",
+       "value": "<svg width='300' height='300' style='border:solid 1px'><rect x='100' y='70' width='40' height='100' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' /></svg>",
        "visible": true
       }
      },
