--- a/Lect07.ipynb
+++ b/Lect07.ipynb
@@ -4,7 +4,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 34 final"
+    "# 34 final\n",
+    "\n",
+    "`final`로 변수를 선언하면 대입(assignment)이 1번으로 제한된다.\n",
+    "즉 첫번째 대입으로 초기화된 이후에 다른 객체(객체 개념이 없는 기본타입의 경우는 그냥 일반 값)를 대입할 수 없다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "cannot assign a value to final variable n",
+     "evalue": "cannot assign a value to final variable n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mcannot assign a value to final variable n\u001b[0;0m",
+      "\u001b[1;31m n = 2\u001b[0;0m",
+      "\u001b[1;31m ^^     \u001b[0;0m"
+     ]
+    }
+   ],
+   "source": [
+    "final int n = 1;\n",
+    "n = 2;\n",
+    "return n;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final int n;\n",
+    "n = 1;\n",
+    "return n;"
    ]
   },
   {
@@ -204,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkre42210c0.B1"
+       "com.twosigma.beaker.javash.bkrc2f122bc.B"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,8 +269,8 @@
     "class B {\n",
     "    final int x;\n",
     "    final int y;\n",
-    "    B1() { x=0; y=0; }\n",
-    "    B1(int x, int y) { this.x=x; this.y=y; }\n",
+    "    B() { x=0; y=0; }\n",
+    "    B(int x, int y) { this.x=x; this.y=y; }\n",
     "    @Override\n",
     "    public String toString() { return \"(\"+x+\",\"+y+\")\"; }\n",
     "}"
@@ -231,12 +278,140 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2,3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(4,6)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B p = new B(2,3);\n",
+    "System.out.println(p);\n",
+    "p = new B(4,6);\n",
+    "return p;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "cannot assign a value to final variable x",
+     "evalue": "cannot assign a value to final variable x",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mcannot assign a value to final variable x\u001b[0;0m",
+      "\u001b[1;31m p.x = 4\u001b[0;0m",
+      "\u001b[1;31m ^  ^     \u001b[0;0m",
+      "\u001b[1;31m\u001b[0;0m",
+      "\u001b[1;31mcannot assign a value to final variable y\u001b[0;0m",
+      "\u001b[1;31m p.y = 6\u001b[0;0m",
+      "\u001b[1;31m ^  ^     \u001b[0;0m"
+     ]
+    }
+   ],
+   "source": [
+    "B p = new B(2,3);\n",
+    "System.out.println(p);\n",
+    "p.x = 4;\n",
+    "p.y = 6;\n",
+    "return p;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2,3)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final B p = new B(2,3);\n",
+    "return p;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "cannot assign a value to final variable p",
+     "evalue": "cannot assign a value to final variable p",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mcannot assign a value to final variable p\u001b[0;0m",
+      "\u001b[1;31m p = new B(4,6)\u001b[0;0m",
+      "\u001b[1;31m ^^              \u001b[0;0m"
+     ]
+    }
+   ],
+   "source": [
+    "final B p = new B(2,3);\n",
+    "System.out.println(p);\n",
+    "p = new B(4,6);\n",
+    "return p;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "cannot assign a value to final variable x",
+     "evalue": "cannot assign a value to final variable x",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mcannot assign a value to final variable x\u001b[0;0m",
+      "\u001b[1;31m p.x = 4\u001b[0;0m",
+      "\u001b[1;31m ^  ^     \u001b[0;0m",
+      "\u001b[1;31m\u001b[0;0m",
+      "\u001b[1;31mcannot assign a value to final variable y\u001b[0;0m",
+      "\u001b[1;31m p.y = 6\u001b[0;0m",
+      "\u001b[1;31m ^  ^     \u001b[0;0m"
+     ]
+    }
+   ],
+   "source": [
+    "B p = new B(2,3);\n",
+    "System.out.println(p);\n",
+    "p.x = 4;\n",
+    "p.y = 6;\n",
+    "return p;"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "// TODO"
-   ]
+   "source": []
   }
  ],
  "metadata": {
