--- a/Lect07.ipynb
+++ b/Lect07.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,16 +56,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkre42210c0.A"
+       "com.twosigma.beaker.javash.bkrfc04bbf9.A"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "(6,8)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "(6,8)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "(6,8)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -221,13 +221,13 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mERROR: java.lang.IllegalStateException: cannot assign a value to final variable x\u001b[0;0m",
-      "\u001b[1;31m B(int x, int y) { this.x=x\u001b[0;0m",
-      "\u001b[1;31m                   ^     ^   \u001b[0;0m",
+      "\u001b[1;31mERROR: java.lang.IllegalStateException: invalid method declaration; return type required\u001b[0;0m",
+      "\u001b[1;31m B() {}\u001b[0;0m",
+      "\u001b[1;31m ^      \u001b[0;0m",
       "\u001b[1;31m\u001b[0;0m",
-      "\u001b[1;31mcannot assign a value to final variable y\u001b[0;0m",
-      "\u001b[1;31m this.y=y\u001b[0;0m",
-      "\u001b[1;31m ^     ^   \u001b[0;0m"
+      "\u001b[1;31minvalid method declaration; return type required\u001b[0;0m",
+      "\u001b[1;31m B(int x, int y) { this.x=x\u001b[0;0m",
+      "\u001b[1;31m ^                          \u001b[0;0m"
      ]
     }
    ],
@@ -251,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrc2f122bc.B"
+       "com.twosigma.beaker.javash.bkrfc04bbf9.B"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "(4,6)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "(2,3)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -407,6 +407,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  주의 BeakerX에서 메소드 내의 return 경로 문제"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "incompatible types",
+     "evalue": " unexpected return value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mincompatible types: unexpected return value\u001b[0;0m",
+      "\u001b[1;31m if (false) return 3\u001b[0;0m",
+      "\u001b[1;31m                   ^^ \u001b[0;0m"
+     ]
+    }
+   ],
+   "source": [
+    "if (false) return 3;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if (false) return 1;\n",
+    "else       return 2;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if (false) return 1;\n",
+    "\n",
+    "return 2;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkrfc04bbf9.A"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class A {\n",
+    "    int f() { // 에러 없이 조용히 f가 무시된다 :(\n",
+    "        if (false) return 3;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "cannot find symbol",
+     "evalue": "cannot find symbol",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mcannot find symbol\u001b[0;0m",
+      "\u001b[1;31m  symbol:   method f()\u001b[0;0m",
+      "\u001b[0;31m  location: variable a of type com.twosigma.beaker.javash.bkrfc04bbf9.A\u001b[0;0m",
+      "\u001b[0;31m return a.f()\u001b[0;0m",
+      "\u001b[0;31m        ^  ^   \u001b[0;0m"
+     ]
+    }
+   ],
+   "source": [
+    "A a = new A();\n",
+    "return a.f();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -426,7 +543,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "11.0.3"
+   "version": "11.0.1"
   },
   "toc": {
    "base_numbering": 1,
