--- a/HW01.ipynb
+++ b/HW01.ipynb
@@ -25,7 +25,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr7fb38250.RGB"
+       "com.twosigma.beaker.javash.bkr5f163133.RGB"
       ]
      },
      "execution_count": 1,
@@ -93,7 +93,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr7fb38250.Point"
+       "com.twosigma.beaker.javash.bkr5f163133.Point"
       ]
      },
      "execution_count": 4,
@@ -118,22 +118,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "23\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr7fb38250.Point@123045a6"
+       "com.twosigma.beaker.javash.bkr5f163133.Point@21c36e9f"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Point p = new Point(12,23);\n",
+    "System.out.println(p.x);\n",
+    "System.out.println(p.y);\n",
     "return p.toString();"
    ]
   },
@@ -145,7 +155,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr7fb38250.Point@2348f83e"
+       "com.twosigma.beaker.javash.bkr5f163133.Point@7737cc8f"
       ]
      },
      "execution_count": 6,
@@ -176,7 +186,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr7fb38250.ShapeObj"
+       "com.twosigma.beaker.javash.bkr5f163133.ShapeObj"
       ]
      },
      "execution_count": 7,
@@ -226,7 +236,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr7fb38250.CircObj"
+       "com.twosigma.beaker.javash.bkr5f163133.CircObj"
       ]
      },
      "execution_count": 8,
@@ -245,6 +255,16 @@
     "    // 아래를 완성하라 (1점)\n",
     "    @Override\n",
     "    Point closest(Point p) {\n",
+    "        /*\n",
+    "        if (?????????) { // 원 안에 들어있으면 (중심에서 p와의 거리가 r 이하이면)\n",
+    "            return p; // 왜냐하면 자기 자신이 거리 0으로 원의 모든 점들 중 가장 가깝다\n",
+    "        }\n",
+    "        */\n",
+    "        \n",
+    "        // 나머지 경우에는 둘레에 있는 가장 가까운 점을 찾아서\n",
+    "        // (가장 가까운 점은 중심과 p를 직선으로 이었을 때 둘레와 만나는 점)\n",
+    "        // 예를 들어서 그렇게 찾은 가장 가까운 점의 좌표가 (x1,y1) 이라면\n",
+    "        // return new Point(x1,y1); 을 하면 된다.\n",
     "        return new Point(); // 함수를 작성하라\n",
     "    }\n",
     "    @Override\n",
@@ -279,7 +299,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f07df9c3-5964-4f0c-a0ae-7d3faacd94cd",
+       "model_id": "d9d0205f-aedd-4c9c-9e17-014f90e68fc4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -332,7 +352,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d63909ab-ceeb-45c1-896d-157effa4889b",
+       "model_id": "8261958f-32b6-403e-94af-a6c2a0894c18",
        "version_major": 2,
        "version_minor": 0
       },
@@ -384,9 +404,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr7fb38250.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr7fb38250.ShapeObj\u001b[0;0m",
-      "\u001b[0;31m class RectObj extends ShapeObj { int w; int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                                ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr5f163133.RectObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr5f163133.ShapeObj\u001b[0;0m",
+      "\u001b[0;31m class RectObj extends ShapeObj {  int w;  int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                                  ^ \u001b[0;0m"
      ]
     }
    ],
@@ -413,7 +433,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f90b8987-5afd-4fec-b4a2-a7fb1f50b0e5",
+       "model_id": "2c902742-049b-407e-9b77-25518a4f4445",
        "version_major": 2,
        "version_minor": 0
       },
@@ -449,9 +469,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr7fb38250.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr7fb38250.ShapeObj\u001b[0;0m",
-      "\u001b[0;31m class RTriObj extends ShapeObj { int w; int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                                ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr5f163133.RTriObj is not abstract and does not override abstract method toSVG() in com.twosigma.beaker.javash.bkr5f163133.ShapeObj\u001b[0;0m",
+      "\u001b[0;31m class RTriObj extends ShapeObj {  int w;  int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                                  ^ \u001b[0;0m"
      ]
     }
    ],
@@ -496,7 +516,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr7fb38250.Shape"
+       "com.twosigma.beaker.javash.bkr5f163133.Shape"
       ]
      },
      "execution_count": 14,
@@ -534,7 +554,7 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkr7fb38250.Circle"
+       "com.twosigma.beaker.javash.bkr5f163133.Circle"
       ]
      },
      "execution_count": 15,
@@ -588,7 +608,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c4553a4-7ae9-4448-964c-7f492104fdfd",
+       "model_id": "c8583eae-5367-42cf-a440-3b9a84704eca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -652,9 +672,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr7fb38250.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr7fb38250.Point,com.twosigma.beaker.javash.bkr7fb38250.Obj) in com.twosigma.beaker.javash.bkr7fb38250.Shape\u001b[0;0m",
-      "\u001b[0;31m class Rectangle extends Shape { int w; int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                               ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr5f163133.Rectangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr5f163133.Point,com.twosigma.beaker.javash.bkr5f163133.Obj) in com.twosigma.beaker.javash.bkr5f163133.Shape\u001b[0;0m",
+      "\u001b[0;31m class Rectangle extends Shape {  int w;  int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                                 ^ \u001b[0;0m"
      ]
     }
    ],
@@ -677,9 +697,9 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr7fb38250.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr7fb38250.Point,com.twosigma.beaker.javash.bkr7fb38250.Obj) in com.twosigma.beaker.javash.bkr7fb38250.Shape\u001b[0;0m",
-      "\u001b[0;31m class RTriangle extends Shape { int w; int h;  }\u001b[0;0m",
-      "\u001b[0;31m ^                                               ^ \u001b[0;0m"
+      "\u001b[0;31mERROR: java.lang.IllegalStateException: com.twosigma.beaker.javash.bkr5f163133.RTriangle is not abstract and does not override abstract method collides(com.twosigma.beaker.javash.bkr5f163133.Point,com.twosigma.beaker.javash.bkr5f163133.Obj) in com.twosigma.beaker.javash.bkr5f163133.Shape\u001b[0;0m",
+      "\u001b[0;31m class RTriangle extends Shape { int w;  int h;  }\u001b[0;0m",
+      "\u001b[0;31m ^                                                ^ \u001b[0;0m"
      ]
     }
    ],
@@ -712,7 +732,7 @@
    "mimetype": "",
    "name": "Java",
    "nbconverter_exporter": "",
-   "version": "11.0.3"
+   "version": "11.0.1"
   },
   "toc": {
    "base_numbering": 1,
