--- a/HW01.ipynb
+++ b/HW01.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "com.twosigma.beaker.javash.bkr5f163133.CircObj"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
     "        // (가장 가까운 점은 중심과 p를 직선으로 이었을 때 둘레와 만나는 점)\n",
     "        // 예를 들어서 그렇게 찾은 가장 가까운 점의 좌표가 (x1,y1) 이라면\n",
     "        // return new Point(x1,y1); 을 하면 된다.\n",
-    "        return new Point(); // 함수를 작성하라\n",
+    "        return new Point(77,76); // 함수를 작성하라\n",
     "    }\n",
     "    @Override\n",
     "    boolean collides(Point p) {\n",
@@ -284,13 +284,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "77\n",
+      "76\n",
       "<circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' />\n",
       "<circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' />\n",
       "<circle cx='50' cy='50' r='40' style='stroke:black; stroke-width:1; fill:rgb(255,0,0); opacity:0.33' />\n"
@@ -299,7 +301,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9d0205f-aedd-4c9c-9e17-014f90e68fc4",
+       "model_id": "830902c0-ddce-4034-924a-13a550ed1a84",
        "version_major": 2,
        "version_minor": 0
       },
@@ -315,6 +317,13 @@
     "RGB red = new RGB(255,0,0);\n",
     "\n",
     "CircObj c1 = new CircObj(40, new Point( 50, 50), red);\n",
+    "\n",
+    "Point p2 = new Point (100,100);\n",
+    "Point p4 = c1.closest(p2); // 함수 실행 결과값을 p4에 저장 \n",
+    "System.out.println(p4.x);\n",
+    "System.out.println(p4.y);\n",
+    "// 위와 같이 하는 것이 귀찮으면 toString을 Point에서 오버라이딩해서 사용해도 된다.\n",
+    "\n",
     "\n",
     "System.out.println( c1.toSVG() );\n",
     "System.out.println( c1.toString() );\n",
