--- a/Lect07.ipynb
+++ b/Lect07.ipynb
@@ -12,28 +12,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "cannot assign a value to final variable n",
-     "evalue": "cannot assign a value to final variable n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mcannot assign a value to final variable n\u001b[0;0m",
-      "\u001b[1;31m n = 2\u001b[0;0m",
-      "\u001b[1;31m ^^     \u001b[0;0m"
-     ]
-    }
-   ],
-   "source": [
-    "final int n = 1;\n",
-    "n = 2;\n",
-    "return n;"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -49,8 +27,8 @@
     }
    ],
    "source": [
-    "final int n;\n",
-    "n = 1;\n",
+    "final int n = 1;\n",
+    "n = 2;\n",
     "return n;"
    ]
   },
@@ -62,10 +40,32 @@
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrfc04bbf9.A"
+       "1"
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final int n;\n",
+    "n = 1;\n",
+    "return n;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "com.twosigma.beaker.javash.bkraa28f073.A"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,97 +79,6 @@
     "    @Override\n",
     "    public String toString() { return \"(\"+x+\",\"+y+\")\"; }\n",
     "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3,4)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(6,8)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A p = new A(3,4);\n",
-    "System.out.println(p);\n",
-    "p = new A(6,8);\n",
-    "return p;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3,4)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(6,8)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A p = new A(3,4);\n",
-    "System.out.println(p);\n",
-    "p.x = 6;\n",
-    "p.y = 8;\n",
-    "return p;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "이번에는 변수 `p`를 `final`로 선언하면 어떻게 되는지 알아보자."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "cannot assign a value to final variable p",
-     "evalue": "cannot assign a value to final variable p",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mcannot assign a value to final variable p\u001b[0;0m",
-      "\u001b[1;31m p = new A(6,8)\u001b[0;0m",
-      "\u001b[1;31m ^^              \u001b[0;0m"
-     ]
-    }
-   ],
-   "source": [
-    "final A p = new A(3,4);\n",
-    "System.out.println(p);\n",
-    "p = new A(6,8);\n",
-    "return p;"
    ]
   },
   {
@@ -196,6 +105,97 @@
     }
    ],
    "source": [
+    "A p = new A(3,4);\n",
+    "System.out.println(p);\n",
+    "p = new A(6,8);\n",
+    "return p;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3,4)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(6,8)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A p = new A(3,4);\n",
+    "System.out.println(p);\n",
+    "p.x = 6;\n",
+    "p.y = 8;\n",
+    "return p;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이번에는 변수 `p`를 `final`로 선언하면 어떻게 되는지 알아보자."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "cannot assign a value to final variable p",
+     "evalue": "cannot assign a value to final variable p",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mcannot assign a value to final variable p\u001b[0;0m",
+      "\u001b[1;31m p = new A(6,8)\u001b[0;0m",
+      "\u001b[1;31m ^^              \u001b[0;0m"
+     ]
+    }
+   ],
+   "source": [
+    "final A p = new A(3,4);\n",
+    "System.out.println(p);\n",
+    "p = new A(6,8);\n",
+    "return p;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3,4)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(6,8)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "final A p = new A(3,4);\n",
     "System.out.println(p);\n",
     "p.x = 6;\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -221,13 +221,13 @@
      "evalue": " java.lang.IllegalStateException",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mERROR: java.lang.IllegalStateException: invalid method declaration; return type required\u001b[0;0m",
-      "\u001b[1;31m B() {}\u001b[0;0m",
-      "\u001b[1;31m ^      \u001b[0;0m",
+      "\u001b[1;31mERROR: java.lang.IllegalStateException: cannot assign a value to final variable x\u001b[0;0m",
+      "\u001b[1;31m A1(int x, int y) { this.x=x\u001b[0;0m",
+      "\u001b[1;31m                    ^     ^   \u001b[0;0m",
       "\u001b[1;31m\u001b[0;0m",
-      "\u001b[1;31minvalid method declaration; return type required\u001b[0;0m",
-      "\u001b[1;31m B(int x, int y) { this.x=x\u001b[0;0m",
-      "\u001b[1;31m ^                          \u001b[0;0m"
+      "\u001b[1;31mcannot assign a value to final variable y\u001b[0;0m",
+      "\u001b[1;31m this.y=y\u001b[0;0m",
+      "\u001b[1;31m ^     ^   \u001b[0;0m"
      ]
     }
    ],
@@ -235,8 +235,8 @@
     "class A1 {\n",
     "    final int x = 0;\n",
     "    final int y = 0;\n",
-    "    B() {}\n",
-    "    B(int x, int y) { this.x=x; this.y=y; }\n",
+    "    A1() {}\n",
+    "    A1(int x, int y) { this.x=x; this.y=y; }\n",
     "    @Override\n",
     "    public String toString() { return \"(\"+x+\",\"+y+\")\"; }\n",
     "}"
@@ -251,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "com.twosigma.beaker.javash.bkrfc04bbf9.B"
+       "com.twosigma.beaker.javash.bkraa28f073.B"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "(4,6)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
